# FHC

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  TODO.MD  docker-compose.yml
config/: .nfile-template
examples/: CMakeLists.txt  http_example.cpp
examples/web/: index.html
include/base/: Ipqxx.hpp  binance_client.hpp  database.hpp  istorage_adapter.hpp  pqxx_adapter.hpp  pqxx_adaptor.hpp  sql_loader.hpp
include/flatbuffers/: klines_generated.h
include/server/: IHtppServer.hpp  httplib_adapter.hpp  ihttp_server.hpp  request_handler.hpp  server.hpp  utils.hpp
schemas/: klines.fbs
sql/: create_table_crypto_klines.sql  insert_kline.sql  select_exists_crypto_klines.sql  select_klines.sql  select_last_kline.sql
src/: main.cpp
src/base/: binance_client.cpp  database.cpp  pqxx_adapter.cpp  pqxx_adaptor.cpp  sql_loader.cpp
src/server/: httplib_adapter.cpp  request_handler.cpp  server.cpp  utils.cpp
